--- a/frontend/templates/frontend/list.html
+++ b/frontend/templates/frontend/list.html
@@ -89,10 +89,30 @@
 
 
 <script>
+    function getCookie(name) {
+        let cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            const cookies = document.cookie.split(';');
+            for (let i = 0; i < cookies.length; i++) {
+                const cookie = cookies[i].trim();
+                // Does this cookie string begin with the name we want?
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+
+    const csrftoken = getCookie('csrftoken');
+
+
     buildlist()
 
     function buildlist() {
         var wrapper = document.getElementById('list-wrapper')
+        wrapper.innerHTML = ''
         var url = 'http://localhost:8000/api/task-list/'
         fetch(url)
             .then((resp) => resp.json())
@@ -102,12 +122,33 @@
                 const list = data;
                 for (const i in list) {
                     console.log(list[i].title)
-                    const item = '<div id="data-row-${i}" class="task-wrapper flex-wrapper"> <div style="flex:7"><span class="title"> '+list[i].title+' </span></div> <div style="flex:1"><button class="btn btn-small btn-outline-info edit" >Edit</button></div> <div style="flex:1"><button class="btn btn-small btn-outline-dark delete">-</button></div> </div>';
+                    const item = '<div id="data-row-${i}" class="task-wrapper flex-wrapper"> <div style="flex:7"><span class="title"> ' + list[i].title + ' </span></div> <div style="flex:1"><button class="btn btn-small btn-outline-info edit" >Edit</button></div> <div style="flex:1"><button class="btn btn-small btn-outline-dark delete">-</button></div> </div>';
                     wrapper.innerHTML += item
                 }
 
             })
     }
+
+    <!--Create task-->
+
+    var form = document.getElementById('form-wrapper')
+    form.addEventListener('submit', function (e) {
+        e.preventDefault()
+        console.log('Form submitted successfully')
+        var url = 'http://localhost:8000/api/task-create/'
+        var title = document.getElementById('title').value
+        fetch(url, {
+            method: 'POST',
+            headers: {
+                'content-type': 'application/json',
+                'X-CSRFToken': csrftoken
+            },
+            body: JSON.stringify({'title': title})
+        }).then(function (response) {
+            buildlist()
+            document.getElementById('form').reset()
+        })
+    })
 </script>
 
 
